fixed overlapping rendering on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -91,7 +91,7 @@
         padding: 0;
         /* margin-left: 0; */
         /* float: left; */
-        float: none;
+        /* float: none; */
         text-align: center;
         width: 100%;
         /* border: red 2px solid;         */
